hack-express/public/stylesheets/style.css
body {
	padding-top: 60px;
	padding-bottom: 40px;
}

div#personalNotes>input,textarea, .uneditable-input {
	width:98%;
	height:80%;
	resize:vertical;
}

div#teamNotes>input,textarea, .uneditable-input {
	width:98%;
	height:80%;
	resize:vertical;
}

.pagination {
	margin: 0px 0px 0px 0px;
}

.span3.well img {
	display: block;
	padding: 10px 0px 10px 0px;
	margin-right: auto;
	margin-left: auto;
}

[class^="icon-"],
[class*=" icon-"] {
	background-image: url('/images/glyphicons-halflings.png')
}

